--- a/11/Dockerfile
+++ b/11/Dockerfile
@@ -1,10 +1,10 @@
 # vim:set ft=dockerfile:
-FROM registry.access.redhat.com/ubi8/ubi:8.2-347
+FROM registry.access.redhat.com/ubi8/ubi:8.3-199
 
 LABEL name="PostgreSQL Container Images" \
-      vendor="2ndQuadrant" \
-      url="https://www.2ndquadrant.com/" \
-      version="11.9-1PGDG.rhel8" \
+      vendor="EnterpriseDB" \
+      url="https://www.enterprisedb.com/" \
+      version="11.10-1PGDG.rhel8" \
       release="1" \
       summary="PostgreSQL Container images." \
       description="This Docker image contains PostgreSQL and Barman Cloud  \
@@ -17,16 +17,16 @@ RUN set -xe ; \
 	yum -y install hostname rsync tar gettext bind-utils nss_wrapper glibc-locale-source glibc-langpack-en ; \
 	yum -y install https://download.postgresql.org/pub/repos/yum/reporpms/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm ; \
 	yum -y --setopt=tsflags=nodocs install \
-		postgresql11-11.9-1PGDG.rhel8 \
-		postgresql11-contrib-11.9-1PGDG.rhel8 \
-		postgresql11-server-11.9-1PGDG.rhel8 \
-		postgresql11-libs-11.9-1PGDG.rhel8 ; \
+		postgresql11-11.10-1PGDG.rhel8 \
+		postgresql11-contrib-11.10-1PGDG.rhel8 \
+		postgresql11-server-11.10-1PGDG.rhel8 \
+		postgresql11-libs-11.10-1PGDG.rhel8 ; \
 	yum -y clean all --enablerepo='*'
 
 # Install barman-cloud
 RUN set -xe ; \
 	yum -y install python38-pip python38-psycopg2 ; \
-	pip3.8 install barman[cloud]=="2.11" ; \
+	pip3.8 install barman[cloud]=="2.12" ; \
 	yum -y clean all --enablerepo='*'
 
 # make the sample config easier to munge (and "correct by default")
@@ -44,6 +44,48 @@ RUN set -xeu ; \
 
 ENV PATH $PATH:/usr/pgsql-11/bin
 
+RUN mkdir -p /var/run/postgresql && chown -R postgres:postgres /var/run/postgresql && chmod 2777 /var/run/postgresql
+
+ENV PGDATA /var/lib/postgresql/data/pgdata
+# this 777 will be replaced by 700 at runtime (allows semi-arbitrary "--user" values)
+RUN mkdir -p "$PGDATA" && chown -R postgres:postgres "$PGDATA" && chmod 777 "$PGDATA"
+VOLUME /var/lib/postgresql/data
+
+RUN mkdir /docker-entrypoint-initdb.d
+
 USER 26
 
+ENTRYPOINT ["docker-entrypoint.sh"]
+
+# We set the default STOPSIGNAL to SIGINT, which corresponds to what PostgreSQL
+# calls "Fast Shutdown mode" wherein new connections are disallowed and any
+# in-progress transactions are aborted, allowing PostgreSQL to stop cleanly and
+# flush tables to disk, which is the best compromise available to avoid data
+# corruption.
+#
+# Users who know their applications do not keep open long-lived idle connections
+# may way to use a value of SIGTERM instead, which corresponds to "Smart
+# Shutdown mode" in which any existing sessions are allowed to finish and the
+# server stops when all sessions are terminated.
+#
+# See https://www.postgresql.org/docs/12/server-shutdown.html for more details
+# about available PostgreSQL server shutdown signals.
+#
+# See also https://www.postgresql.org/docs/12/server-start.html for further
+# justification of this as the default value, namely that the example (and
+# shipped) systemd service files use the "Fast Shutdown mode" for service
+# termination.
+#
+STOPSIGNAL SIGINT
+#
+# An additional setting that is recommended for all users regardless of this
+# value is the runtime "--stop-timeout" (or your orchestrator/runtime's
+# equivalent) for controlling how long to wait between sending the defined
+# STOPSIGNAL and sending SIGKILL (which is likely to cause data corruption).
+#
+# The default in most runtimes (such as Docker) is 10 seconds, and the
+# documentation at https://www.postgresql.org/docs/12/server-start.html notes
+# that even 90 seconds may not be long enough in many instances.
+
 EXPOSE 5432
+CMD ["postgres"]
