--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
 
   generate-jobs:
     name: Generate Jobs
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     outputs:
       strategy: ${{ steps.generate-jobs.outputs.strategy }}
     steps:
