--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,10 @@ jobs:
       run: |
         export PATH="$HOME/bashbrew/bin:$PATH"
         bashbrew --library "$HOME/library" build postgresql
+    - uses: hands-lab/dockle-action@v1
+      if: success()
+      with:
+        image: postgresql
     - name: Docker Login
       if: success()
       env:
