Use `requirements.txt` to install specific Barman version and at the same time, check the hash of every package
Signed-off-by: Jonathan Gonzalez V <jonathan.gonzalez@enterprisedb.com>

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -19,7 +19,10 @@ jobs:
         with:
           timeout_minutes: 15
           max_attempts: 3
-          command: ./update.sh
+          command: |
+            # pip-tools provides pip-compile used by update.sh
+            pip install pip-tools
+            ./update.sh
       - name: Diff
         run: |
           git status
