--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -21,7 +21,7 @@ jobs:
           max_attempts: 3
           command: |
             # pip-tools provides pip-compile used by update.sh
-            export PATH=%HOME/.local/bin:$PATH
+            export PATH=$HOME/.local/bin:$PATH
             pip3 install pip-tools
             ./update.sh
       - name: Diff
