--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
   repository_dispatch:
     types:
       - trigger-build
@@ -61,3 +62,8 @@ jobs:
         push: true
         tags: ${{ steps.docker-meta.outputs.tags }}
         labels: ${{ github.ref != 'refs/heads/main' && 'quay.expires-after=7d' || '' }}
+    - name: Dockle scan
+      uses: hands-lab/dockle-action@v1
+      if: success()
+      with:
+        image: "${{ env.IMAGE_NAME }}:${{ matrix.tags[0] }}"
