Requires hashes to install packages using pip (#7)
Signed-off-by: Jonathan Gonzalez V <jonathan.gonzalez@enterprisedb.com>
Co-authored-by: Valerio Del Sarto <valerio.delsarto@enterprisedb.com>
Co-authored-by: Jonathan Battiato <jonathan.battiato@enterprisedb.com>

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -19,7 +19,11 @@ jobs:
         with:
           timeout_minutes: 15
           max_attempts: 3
-          command: ./update.sh
+          command: |
+            # pip-tools provides pip-compile used by update.sh
+            export PATH=$HOME/.local/bin:$PATH
+            pip3 install pip-tools
+            ./update.sh
       - name: Diff
         run: |
           git status
