--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,7 +70,6 @@ jobs:
         labels: ${{ github.ref != 'refs/heads/main' && 'quay.expires-after=7d' || '' }}
     - name: Dockle scan
       uses: hands-lab/dockle-action@v1
-      if: ${{ success() }}
       with:
         image: "${{ env.IMAGE_STAGING }}:${{ matrix.tags[0] }}"
         exit-code: '1'
@@ -86,3 +85,19 @@ jobs:
         SLACK_ICON: https://avatars.githubusercontent.com/u/44036562?size=48
         SLACK_USERNAME: ghBot
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+  # Send a notification if new public images are released
+  notify:
+    needs: build
+    name: Notify update on Slack
+    runs-on: ubuntu-20.04
+    steps:
+    - name: Slack Notification
+      uses: rtCamp/action-slack-notify@v2
+      # Only images built from the main branch go public, and we limit the
+      # amount of notifications to those.
+      if: ${{ github.ref == 'refs/heads/main' }}
+      env:
+        SLACK_ICON: https://avatars.githubusercontent.com/u/44036562?size=48
+        SLACK_USERNAME: ghBot
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+        SLACK_MESSAGE: New PostgreSQL images pushed on Quay.io
