Added support for Debian images.
Seperate UBI and Debian content into directories.

Added Dockerfile.postgis to build the debian containers also using PostGIS

Signed-off-by: Jonathan Gonzalez V <jonathan.gonzalez@enterprisedb.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
           do
             ARGS+=(--tag "${IMAGE_NAME}:${tag}")
           done
-          docker build ${ARGS[@]} '${{ matrix.version }}'
+          docker build ${ARGS[@]} '${{ matrix.dir }}'
       - name: History ${{ matrix.version }}
         run: docker history "${IMAGE_NAME}:${{ matrix.tags[0] }}"
       - name: Test ${{ matrix.version }}
