--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,8 @@ on:
       - trigger-build
 
 env:
-  IMAGE_STAGING: quay.io/enterprisedb/postgresql-testing
-  IMAGE_RELEASE: quay.io/enterprisedb/postgresql
+  IMAGE_STAGING: enterprisedb/postgresql-testing
+  IMAGE_RELEASE: enterprisedb/postgresql
 
 jobs:
   generate-jobs:
@@ -28,7 +28,7 @@ jobs:
   build:
     needs: generate-jobs
     strategy: ${{ fromJson(needs.generate-jobs.outputs.strategy) }}
-    name: ${{ matrix.version }}
+    name: ${{ matrix.name }}
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
@@ -42,36 +42,46 @@ jobs:
         RESULT=""
         for tag in $(jq -r '.[]' <<< "${TAGS}")
         do
-          RESULT="${RESULT},${IMAGE_STAGING}:${tag}"
+          RESULT="${RESULT},quay.io/${IMAGE_STAGING}:${tag},${IMAGE_STAGING}:${tag}"
           # If we are running the pipeline in the main branch images are pushed in both -testing and PROD repo
           if [ "${GITHUB_REF#refs/heads/}" == main ]
           then
-            RESULT="${RESULT},${IMAGE_RELEASE}:${tag}"
+            RESULT="${RESULT},quay.io/${IMAGE_RELEASE}:${tag},${IMAGE_RELEASE}:${tag}"
           fi
         done
         echo "::set-output name=tags::${RESULT%,}"
     - name: Set up Docker Buildx
       id: buildx
       uses: docker/setup-buildx-action@v1.3.0
+
     - name: Login to quay.io
       uses: docker/login-action@v1.9.0
       with:
         registry: quay.io/enterprisedb
         username: ${{ secrets.QUAY_USERNAME }}
         password: ${{ secrets.QUAY_TOKEN }}
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1.9.0
+      with:
+        username: ${{ secrets.DOCKER_HUB_USER }}
+        password: ${{ secrets.DOCKER_HUB_SECRET }}
+
     - name: Build and push
       uses: docker/build-push-action@v2.5.0
       with:
-        context: ${{ matrix.version }}
+        context: ${{ matrix.dir }}
+        file: ${{ matrix.file }}
         # Available architecture on UBI8 are: linux/amd64, linux/arm64, linux/ppc64le
         platforms: linux/amd64
         push: true
         tags: ${{ steps.docker-meta.outputs.tags }}
         labels: ${{ github.ref != 'refs/heads/main' && 'quay.expires-after=7d' || '' }}
+
     - name: Dockle scan
       uses: hands-lab/dockle-action@v1
       with:
-        image: "${{ env.IMAGE_STAGING }}:${{ matrix.tags[0] }}"
+        image: "quay.io/${{ env.IMAGE_STAGING }}:${{ matrix.tags[0] }}"
         exit-code: '1'
         exit-level: WARN
       env:
