--- a/Debian/Dockerfile-postgis.template
+++ b/Debian/Dockerfile-postgis.template
@@ -84,6 +84,7 @@ RUN set -ex; \
 
 ENV PG_MAJOR %%PG_MAJOR%%
 ENV PG_VERSION %%PG_VERSION%%
+ENV BARMAN_VERSION %%BARMAN_VERSION%%
 
 RUN set -ex; \
 	\
@@ -128,7 +129,7 @@ RUN set -ex; \
 				apt-get source --compile \
 					postgresql-common pgdg-keyring \
           "postgresql-$PG_MAJOR=$PG_VERSION" \
-          "barman-cloud-cli" \
+          "barman-cli-cloud" \
 			; \
 # we don't remove APT lists here because they get re-downloaded and removed later
 			\
@@ -155,6 +156,7 @@ RUN set -ex; \
 	apt-get install -y --no-install-recommends \
 		"postgresql-$PG_MAJOR=$PG_VERSION" \
 		"postgresql-contrib-$PG_MAJOR=$PG_VERSION" \
+		"barman-cli-cloud=$BARMAN_VERSION" \
 	; \
 	\
 	rm -rf /var/lib/apt/lists/*; \
