feat: Added pgaudit package to Debian, Debian Postgis and UBI images

--- a/Debian/Dockerfile-postgis.template
+++ b/Debian/Dockerfile-postgis.template
@@ -129,6 +129,7 @@ RUN set -ex; \
 				apt-get source --compile \
 					postgresql-common pgdg-keyring \
           "postgresql-$PG_MAJOR=$PG_VERSION" \
+          "postgresql-$PG_MAJOR-pgaudit" \
           "barman-cli-cloud" \
 			; \
 # we don't remove APT lists here because they get re-downloaded and removed later
@@ -156,6 +157,7 @@ RUN set -ex; \
 	apt-get install -y --no-install-recommends \
 		"postgresql-$PG_MAJOR=$PG_VERSION" \
 		"postgresql-contrib-$PG_MAJOR=$PG_VERSION" \
+		"postgresql-$PG_MAJOR-pgaudit" \
 		"barman-cli-cloud=$BARMAN_VERSION" \
 	; \
 	\
